--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httpx==0.27.2
 idna==3.10
 jiter==0.6.1
 openai==1.52.2
+pillow==11.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
