--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: A community statement supporting the Open Source Definition (OSD).
 baseurl: ""
-url: "https://SaveOpenSource.github.io"
+url: "https://osd.fyi"
 
 github_username: OpenSourceDefinition
 repository: OpenSourceDefinition/SaveOpenSource
