--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
+PyYAML==6.0.2
 sniffio==1.3.1
 tinycss2==1.4.0
 tqdm==4.66.5
