--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     },
     "image_fields": {
         "button_text": "Sign it now",
-        "main_text": "A community statement supporting the Open Source Definition (OSD)",
-        "call_to_action_text": "Call to Open Source Software users"
+        "main_text": "Community Commitment to Open Source Definition",
+        "call_to_action_text": "Call to Open Source Software stakeholders"
     }
 }
