osd.fyi -> opensourcedeclaration.org

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Community Commitment to Open Source Definition
 baseurl: ""
-url: "https://osd.fyi"
+url: "https://opensourcedeclaration.org"
 
 github_username: OpenSourceDefinition
 repository: OpenSourceDefinition/sos
