--- a/config.json
+++ b/config.json
@@ -3,9 +3,10 @@
         "translations": "_translations",
         "assets": "assets"
     },
-    "image_fields": {
+    "images": {
+        "font_file": "NotoSans-Bold.ttf",
         "button_text": "Sign it now",
         "main_text": "Community Commitment to Open Source Definition",
-        "call_to_action_text": "Call to Open Source Software stakeholders"
+        "call_to_action_text": "Call to Open Source stakeholders"
     }
 }
