--- a/_scripts/email/package.json
+++ b/_scripts/email/package.json
@@ -4,21 +4,22 @@
     "description": "Email signature system for Open Source Definition Declaration",
     "main": "bin/app.js",
     "scripts": {
-      "build": "tsc",
-      "watch": "tsc -w",
-      "cdk": "cdk"
+        "build": "tsc",
+        "watch": "tsc -w",
+        "cdk": "cdk"
     },
     "dependencies": {
-      "aws-cdk-lib": "^2.131.0",
-      "constructs": "^10.3.0",
-      "source-map-support": "^0.5.21"
+        "aws-cdk-lib": "^2.131.0",
+        "constructs": "^10.3.0",
+        "js-yaml": "^4.1.0",
+        "source-map-support": "^0.5.21"
     },
     "devDependencies": {
-      "@types/node": "^20.11.30",
-      "typescript": "^5.4.2",
-      "ts-node": "^10.9.2",
-      "@types/source-map-support": "^0.5.10",
-      "aws-cdk": "^2.131.0"
+        "@types/js-yaml": "^4.0.9",
+        "@types/node": "^20.17.4",
+        "@types/source-map-support": "^0.5.10",
+        "aws-cdk": "^2.131.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3"
     }
-  }
-  
+}
